--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="root" class="text-center mt-5">
+        <p>Ciao! Mi chiamo {{firstName}} {{lastName}},ho {{age}} anni e sono nata a {{birthPlace}}.</p>
+        <img :src="birthPlaceImage" alt="">
+    </div>
     <!-- JS -->
 <script src="js/script.js"></script>
 </body>
